Fixed menu bar on mobile

--- a/web/assets/css/main.css
+++ b/web/assets/css/main.css
@@ -450,34 +450,39 @@ input, select, textarea {
 	#links a{
 		opacity: 0;
 		visibility: hidden;
+		width: 3em;
 	}
 
 	@keyframes slideIn {
 		from {
 			opacity: 0;
 			visibility: hidden;
-			transform: translateY(-1em);
+			width: 3em;
 		}
 		to {
 			opacity: 1;
 			visibility: visible;
-			transform: translateY(0);
+			width: 10em;
 		}
 	}
 	
 	#links.animate-in a:nth-child(1) {
-		animation-delay: 0.1s;
+		animation-delay: 0.05s;
 	}
 	
 	#links.animate-in a:nth-child(2) {
-		animation-delay: 0.15s;
+		animation-delay: 0.1s;
 	}
 	
 	#links.animate-in a:nth-child(3) {
-		animation-delay: 0.2s;
+		animation-delay: 0.15s;
 	}
 	
 	#links.animate-in a:nth-child(4) {
+		animation-delay: 0.2s;
+	}
+
+	#links.animate-in a:nth-child(5) {
 		animation-delay: 0.25s;
 	}
 	
@@ -487,18 +492,21 @@ input, select, textarea {
 
 	#links a {
 		display: block;
-		color: #aaaaaa;
+		color: #7c7c7c;
 		cursor: pointer;
 		text-align: center;
 		text-decoration: none;
 		border-bottom: solid 1px #cccccc;
 		background-color: #fff;
 		border-left: solid 3px #cccccc; 
-		width: 10em;
 		-moz-transition: background-color 0.2s ease-in-out, color 0.2s ease-in-out, border-color 0.2s ease-in-out;
 		-webkit-transition: background-color 0.2s ease-in-out, color 0.2s ease-in-out, border-color 0.2s ease-in-out;
 		-ms-transition: background-color 0.2s ease-in-out, color 0.2s ease-in-out, border-color 0.2s ease-in-out;
 		transition: background-color 0.2s ease-in-out, color 0.2s ease-in-out, border-color 0.2s ease-in-out;
+	}
+
+	#navbar #iconborder.active #links .link-class {
+		width: 10em;
 	}
 
 	#links a:last-of-type {
